kubernetes/openam-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: openam
  name: openam
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  - name: https
    port: 443
    protocol: TCP
    targetPort: 8443
  selector:
    app: openam
