kubernetes/openam-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openam-ingress
  #annotations:
   # nginx.ingress.kubernetes.io/rewrite-target: /openam
spec:
  rules:
  - host: openam.daniizquie921.com
    http:
      paths:
        - path: /openam/
          pathType: Prefix
          backend:
            service:
              name: openam
              port:
                number: 80
